# StatementScan

./: .gitignore  README.md  bank_statement.py  bsa.ipynb  categories.py  data_loader.py  finance-bro.py  grocery.ipynb  helper.py  ing_insights.ipynb  main.py  pyproject.toml  requirements.txt  transaction_data_loader.py
.github/workflows/: static_code_analysis.yml
old_implementation/: data_loader.py  finance-bro.py  ing_insights.ipynb
